...
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="157dp"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBagFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/foreground"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></com.google.android.material.floatingactionbutton.FloatingActionButton>

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Přidat tašku"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/newBagInput"-->
<!--        app:layout_constraintStart_toStartOf="parent"></TextView>-->

<!--    <EditText-->
<!--        android:id="@+id/newBagInput"-->
<!--        android:layout_width="0dp"-->
...
