...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bagName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Taška"
        android:textSize="24dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"></TextView>
...
