<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ItemsActivity">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Název:"
        app:layout_constraintBottom_toBottomOf="@+id/displaySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displaySpinner"></TextView>

    <Spinner
        android:id="@+id/displaySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="parent"></Spinner>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Řazení:"
        app:layout_constraintBottom_toBottomOf="@+id/sortSpinner"
        app:layout_constraintStart_toEndOf="@+id/displaySpinner"
        app:layout_constraintTop_toTopOf="@+id/sortSpinner"></TextView>

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent"></Spinner>

    <ListView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySpinner"
        tools:layout_editor_absoluteX="115dp"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/foreground"
        android:contentDescription="Přidat položku"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addItemChooser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="6dp"
            android:text="Najít produkt"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@color/foreground"
            app:layout_constraintBottom_toBottomOf="@+id/searchProductFab"
            app:layout_constraintEnd_toStartOf="@+id/searchProductFab"
            app:layout_constraintTop_toTopOf="@+id/searchProductFab"></TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchProductFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/foreground"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintBottom_toTopOf="@+id/scanCodeFab"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="6dp"
            android:text="Skenovat kód"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@color/foreground"
            app:layout_constraintBottom_toBottomOf="@+id/scanCodeFab"
            app:layout_constraintEnd_toStartOf="@+id/scanCodeFab"
            app:layout_constraintTop_toTopOf="@+id/scanCodeFab"></TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scanCodeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/foreground"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>